fixed style issue for Specials section on mobile device

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1918,6 +1918,10 @@ section,
         h4 {
           padding: 0;
         }
+
+        h6, ul {
+          padding: 0 15px;
+        }
       }
     }
   }
